--- a/shootinggame/shooting.html
+++ b/shootinggame/shooting.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>かっこいいシューティング</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>スマホ対応シューティング</title>
   <style>
-    body { margin: 0; overflow: hidden; background: black; }
+    html, body { margin: 0; padding: 0; background: black; height: 100%; overflow: hidden; }
     canvas { display: block; }
     #ui, #stageLabel {
       position: absolute;
@@ -40,6 +41,19 @@
       padding: 10px 20px;
       cursor: pointer;
     }
+    #touchControls {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 30%;
+      display: flex;
+      justify-content: space-between;
+      z-index: 15;
+    }
+    .touchZone {
+      width: 33.3%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
@@ -51,6 +65,11 @@
   </div>
   <div id="stageClearScreen">ステージクリア！</div>
   <canvas id="gameCanvas"></canvas>
+  <div id="touchControls">
+    <div class="touchZone" id="leftZone"></div>
+    <div class="touchZone" id="fireZone"></div>
+    <div class="touchZone" id="rightZone"></div>
+  </div>
 
   <!-- 効果音 -->
   <audio id="se-shoot" src="https://monumental-beignet-d2dffb.netlify.app/se_chun1.mp3"></audio>
@@ -58,221 +77,249 @@
   <audio id="se-mini-bomb2" src="https://monumental-beignet-d2dffb.netlify.app/mini_bomb2.mp3"></audio>
 
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+  const canvas = document.getElementById("gameCanvas");
+  const ctx = canvas.getContext("2d");
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 
-    const seShoot = document.getElementById("se-shoot");
-    const seBomb1 = document.getElementById("se-mini-bomb1");
-    const seBomb2 = document.getElementById("se-mini-bomb2");
+  const seShoot = document.getElementById("se-shoot");
+  const seBomb1 = document.getElementById("se-mini-bomb1");
+  const seBomb2 = document.getElementById("se-mini-bomb2");
 
-    const scoreDisplay = document.getElementById("score");
-    const stageLabel = document.getElementById("stageLabel");
-    const gameOverScreen = document.getElementById("gameOverScreen");
-    const retryButton = document.getElementById("retryButton");
-    const stageClearScreen = document.getElementById("stageClearScreen");
+  const scoreDisplay = document.getElementById("score");
+  const stageLabel = document.getElementById("stageLabel");
+  const gameOverScreen = document.getElementById("gameOverScreen");
+  const retryButton = document.getElementById("retryButton");
+  const stageClearScreen = document.getElementById("stageClearScreen");
 
-    retryButton.onclick = () => location.reload();
+  retryButton.onclick = () => location.reload();
 
-    let score = 0;
-    let stage = 1;
-    let isGameOver = false;
-    let enemySpeedBase = 2;
-    let spawning = true;
+  let score = 0;
+  let stage = 1;
+  let isGameOver = false;
+  let enemySpeedBase = 2;
+  let spawning = true;
 
-    const playerImg = new Image();
-    playerImg.src = "https://i.imgur.com/YVzt5gl.png";
+  const playerImg = new Image();
+  playerImg.src = "https://i.imgur.com/YVzt5gl.png";
 
-    const enemyImgs = [
-      "https://i.imgur.com/TRN6o31.png",
-      "https://i.imgur.com/RQm6yTc.png",
-      "https://i.imgur.com/IC9Z5ur.png",
-      "https://i.imgur.com/ObKkD0E.png"
-    ].map(src => {
-      const img = new Image();
-      img.src = src;
-      return img;
+  const enemyImgs = [
+    "https://i.imgur.com/TRN6o31.png",
+    "https://i.imgur.com/RQm6yTc.png",
+    "https://i.imgur.com/IC9Z5ur.png",
+    "https://i.imgur.com/ObKkD0E.png"
+  ].map(src => {
+    const img = new Image();
+    img.src = src;
+    return img;
+  });
+  let currentEnemyImg = enemyImgs[0];
+
+  const player = {
+    x: canvas.width / 2 - 32,
+    y: canvas.height - 100,
+    width: 64,
+    height: 64,
+    speed: 6
+  };
+
+  const keys = {}, bullets = [], enemies = [], explosions = [];
+
+  window.addEventListener("keydown", e => {
+    if (isGameOver) return;
+    keys[e.key] = true;
+    if (e.code === "Space") fireBullet();
+  });
+  window.addEventListener("keyup", e => keys[e.key] = false);
+
+  function fireBullet() {
+    bullets.push({
+      x: player.x + player.width / 2 - 2,
+      y: player.y,
+      width: 4,
+      height: 10,
+      speed: 10
     });
-    let currentEnemyImg = enemyImgs[0];
+    seShoot.currentTime = 0;
+    seShoot.play();
+  }
 
-    const player = {
-      x: canvas.width / 2 - 20,
-      y: canvas.height - 80,
-      width: 40,
-      height: 40,
-      speed: 7
-    };
-
-    const keys = {}, bullets = [], enemies = [], explosions = [];
-
-    window.addEventListener("keydown", e => {
-      if (isGameOver) return;
-      keys[e.key] = true;
-      if (e.code === "Space") {
-        bullets.push({
-          x: player.x + player.width / 2 - 2,
-          y: player.y,
-          width: 4,
-          height: 10,
-          speed: 10
-        });
-        seShoot.currentTime = 0;
-        seShoot.play();
-      }
+  function spawnEnemy() {
+    if (!spawning) return;
+    const size = 64;
+    const x = Math.random() * (canvas.width - size);
+    enemies.push({
+      x, y: -size, width: size, height: size,
+      speed: enemySpeedBase + Math.random() * 1.5
     });
-    window.addEventListener("keyup", e => keys[e.key] = false);
+  }
+  setInterval(spawnEnemy, 1000);
 
-    function spawnEnemy() {
-      if (!spawning) return;
-      const size = 40;
-      const x = Math.random() * (canvas.width - size);
-      enemies.push({
-        x, y: -size, width: size, height: size,
-        speed: enemySpeedBase + Math.random() * 1.5
-      });
+  function drawPlayer() {
+    ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
+  }
+
+  function drawBullets() {
+    ctx.fillStyle = "yellow";
+    for (let i = bullets.length - 1; i >= 0; i--) {
+      const b = bullets[i];
+      b.y -= b.speed;
+      ctx.fillRect(b.x, b.y, b.width, b.height);
+      if (b.y < 0) bullets.splice(i, 1);
     }
-    setInterval(spawnEnemy, 1000);
+  }
 
-    function drawPlayer() {
-      ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
+  function drawEnemies() {
+    for (let i = enemies.length - 1; i >= 0; i--) {
+      const e = enemies[i];
+      e.y += e.speed;
+      ctx.drawImage(currentEnemyImg, e.x, e.y, e.width, e.height);
+      if (e.y > canvas.height) enemies.splice(i, 1);
     }
+  }
 
-    function drawBullets() {
-      ctx.fillStyle = "yellow";
-      for (let i = bullets.length - 1; i >= 0; i--) {
-        const b = bullets[i];
-        b.y -= b.speed;
-        ctx.fillRect(b.x, b.y, b.width, b.height);
-        if (b.y < 0) bullets.splice(i, 1);
-      }
+  function drawExplosions() {
+    for (let i = explosions.length - 1; i >= 0; i--) {
+      const ex = explosions[i];
+      ctx.beginPath();
+      ctx.arc(ex.x, ex.y, ex.radius, 0, Math.PI * 2);
+      ctx.fillStyle = `rgba(255, 100, 0, ${ex.alpha})`;
+      ctx.fill();
+      ex.radius += 2;
+      ex.alpha -= 0.03;
+      if (ex.alpha <= 0) explosions.splice(i, 1);
     }
+  }
 
-    function drawEnemies() {
-      for (let i = enemies.length - 1; i >= 0; i--) {
-        const e = enemies[i];
-        e.y += e.speed;
-        ctx.drawImage(currentEnemyImg, e.x, e.y, e.width, e.height);
-        if (e.y > canvas.height) enemies.splice(i, 1);
-      }
-    }
+  function showStageClear() {
+    stageClearScreen.style.display = "flex";
+    spawning = false;
+    setTimeout(() => {
+      stage++;
+      stageLabel.textContent = `ステージ: ${stage}`;
+      currentEnemyImg = enemyImgs[Math.min(stage - 1, enemyImgs.length - 1)];
+      enemySpeedBase += 0.5;
+      stageClearScreen.style.display = "none";
+      spawning = true;
+    }, 2500);
+  }
 
-    function drawExplosions() {
-      for (let i = explosions.length - 1; i >= 0; i--) {
-        const ex = explosions[i];
-        ctx.beginPath();
-        ctx.arc(ex.x, ex.y, ex.radius, 0, Math.PI * 2);
-        ctx.fillStyle = `rgba(255, 100, 0, ${ex.alpha})`;
-        ctx.fill();
-        ex.radius += 2;
-        ex.alpha -= 0.03;
-        if (ex.alpha <= 0) explosions.splice(i, 1);
-      }
-    }
+  function detectCollisions() {
+    for (let bi = bullets.length - 1; bi >= 0; bi--) {
+      const b = bullets[bi];
+      for (let ei = enemies.length - 1; ei >= 0; ei--) {
+        const e = enemies[ei];
+        if (b.x < e.x + e.width && b.x + b.width > e.x &&
+            b.y < e.y + e.height && b.y + b.height > e.y) {
+          bullets.splice(bi, 1);
+          enemies.splice(ei, 1);
+          explosions.push({ x: e.x + e.width/2, y: e.y + e.height/2, radius: 10, alpha: 1 });
 
-    function showStageClear(callback) {
-      stageClearScreen.style.display = "flex";
-      spawning = false;
-      setTimeout(() => {
-        stage++;
-        stageLabel.textContent = `ステージ: ${stage}`;
-        currentEnemyImg = enemyImgs[Math.min(stage - 1, enemyImgs.length - 1)];
-        enemySpeedBase += 0.5;
-        stageClearScreen.style.display = "none";
-        spawning = true;
-        callback && callback();
-      }, 2500);
-    }
+          seBomb1.volume = 0.4;
+          seBomb1.currentTime = 0;
+          seBomb1.play();
 
-    function detectCollisions() {
-      for (let bi = bullets.length - 1; bi >= 0; bi--) {
-        const b = bullets[bi];
-        for (let ei = enemies.length - 1; ei >= 0; ei--) {
-          const e = enemies[ei];
-          if (b.x < e.x + e.width && b.x + b.width > e.x &&
-              b.y < e.y + e.height && b.y + b.height > e.y) {
-            bullets.splice(bi, 1);
-            enemies.splice(ei, 1);
-            explosions.push({ x: e.x + e.width/2, y: e.y + e.height/2, radius: 10, alpha: 1 });
+          score++;
+          scoreDisplay.textContent = score;
 
-            seBomb1.volume = 0.4;
-            seBomb1.currentTime = 0;
-            seBomb1.play();
-
-            score++;
-            scoreDisplay.textContent = score;
-
-            if (score % 10 === 0 && stage < enemyImgs.length) {
-              showStageClear();
-            }
-
-            break;
+          if (score % 10 === 0 && stage < enemyImgs.length) {
+            showStageClear();
           }
+
+          break;
         }
       }
     }
+  }
 
-    function checkPlayerCollision() {
-      for (let i = 0; i < enemies.length; i++) {
-        const e = enemies[i];
-        if (player.x < e.x + e.width && player.x + player.width > e.x &&
-            player.y < e.y + e.height && player.y + player.height > e.y) {
-          explosions.push({
-            x: player.x + player.width / 2,
-            y: player.y + player.height / 2,
-            radius: 10,
-            alpha: 1
-          });
-          isGameOver = true;
-          seBomb2.volume = 0.6;
-          seBomb2.currentTime = 0;
-          seBomb2.play();
-          gameOverScreen.style.display = "flex";
-        }
+  function checkPlayerCollision() {
+    for (let i = 0; i < enemies.length; i++) {
+      const e = enemies[i];
+      if (player.x < e.x + e.width && player.x + player.width > e.x &&
+          player.y < e.y + e.height && player.y + player.height > e.y) {
+        explosions.push({
+          x: player.x + player.width / 2,
+          y: player.y + player.height / 2,
+          radius: 10,
+          alpha: 1
+        });
+        isGameOver = true;
+        seBomb2.volume = 0.6;
+        seBomb2.currentTime = 0;
+        seBomb2.play();
+        gameOverScreen.style.display = "flex";
       }
     }
+  }
 
-    const stars = Array.from({ length: 100 }, () => ({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      size: Math.random() * 2 + 1,
-      speed: Math.random() * 0.5 + 0.2
-    }));
+  const stars = Array.from({ length: 100 }, () => ({
+    x: Math.random() * canvas.width,
+    y: Math.random() * canvas.height,
+    size: Math.random() * 2 + 1,
+    speed: Math.random() * 0.5 + 0.2
+  }));
 
-    function drawStars() {
-      ctx.fillStyle = "black";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "white";
-      for (let star of stars) {
-        ctx.beginPath();
-        ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
-        ctx.fill();
-        star.y += star.speed;
-        if (star.y > canvas.height) {
-          star.y = 0;
-          star.x = Math.random() * canvas.width;
-        }
+  function drawStars() {
+    ctx.fillStyle = "black";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    ctx.fillStyle = "white";
+    for (let star of stars) {
+      ctx.beginPath();
+      ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+      ctx.fill();
+      star.y += star.speed;
+      if (star.y > canvas.height) {
+        star.y = 0;
+        star.x = Math.random() * canvas.width;
       }
     }
+  }
 
-    function gameLoop() {
-      if (isGameOver) return;
-      drawStars();
-      if (keys["ArrowLeft"]) player.x -= player.speed;
-      if (keys["ArrowRight"]) player.x += player.speed;
-      player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
+  function gameLoop() {
+    if (isGameOver) return;
+    drawStars();
+    if (keys["ArrowLeft"]) player.x -= player.speed;
+    if (keys["ArrowRight"]) player.x += player.speed;
+    player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
 
-      drawPlayer();
-      drawBullets();
-      drawEnemies();
-      drawExplosions();
-      detectCollisions();
-      checkPlayerCollision();
+    drawPlayer();
+    drawBullets();
+    drawEnemies();
+    drawExplosions();
+    detectCollisions();
+    checkPlayerCollision();
 
-      requestAnimationFrame(gameLoop);
-    }
+    requestAnimationFrame(gameLoop);
+  }
 
-    gameLoop();
+  // スマホタッチ操作
+  const leftZone = document.getElementById("leftZone");
+  const rightZone = document.getElementById("rightZone");
+  const fireZone = document.getElementById("fireZone");
+
+  let leftHold = false;
+  let rightHold = false;
+  let fireInterval = null;
+
+  leftZone.ontouchstart = () => leftHold = true;
+  leftZone.ontouchend = () => leftHold = false;
+  rightZone.ontouchstart = () => rightHold = true;
+  rightZone.ontouchend = () => rightHold = false;
+  fireZone.ontouchstart = () => {
+    fireBullet();
+    fireInterval = setInterval(fireBullet, 250);
+  };
+  fireZone.ontouchend = () => clearInterval(fireInterval);
+
+  function touchLoop() {
+    if (leftHold) player.x -= player.speed;
+    if (rightHold) player.x += player.speed;
+    player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
+    requestAnimationFrame(touchLoop);
+  }
+
+  gameLoop();
+  touchLoop();
   </script>
-</body>
-</html>
+  </body>
+  </html>
