--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ながれる水のはたらきクイズ</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -16,6 +17,10 @@
       <button onclick="restartQuiz()">リトライ</button>
     </div>
   </div>
+
+  <!-- クイズデータ -->
+  <script src="quiz-data.js"></script>
+  <!-- ロジック本体 -->
   <script src="script.js"></script>
 </body>
 </html>
