--- a/quiz/index.html
+++ b/quiz/index.html
@@ -18,9 +18,9 @@
     </div>
   </div>
 
-  <!-- クイズデータ -->
+  <!-- ✅ quizData（クイズ本体）を先に読み込む -->
   <script src="quiz-data.js"></script>
-  <!-- ロジック本体 -->
+  <!-- ✅ ロジックを後に読み込む -->
   <script src="script.js"></script>
 </body>
 </html>
