--- a/shootinggame/index.html
+++ b/shootinggame/index.html
@@ -22,7 +22,12 @@
     <button id="fireBtn">🔫</button>
     <button id="rightBtn">→</button>
   </div>
-
+  
+  <div id="mobileControls">
+    <button id="leftBtn">◀</button>
+    <button id="fireBtn">●</button>
+    <button id="rightBtn">▶</button>
+  </div>
   <!-- 効果音 -->
   <audio id="se-shoot" src="https://monumental-beignet-d2dffb.netlify.app/se_chun1.mp3"></audio>
   <audio id="se-mini-bomb1" src="https://monumental-beignet-d2dffb.netlify.app/mini_bomb1.mp3"></audio>
