--- a/shootinggame/index.html
+++ b/shootinggame/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="pcControls" style="display: none; position: absolute; top: 10px; right: 10px; color: white; font-size: 1.2em;">
+      ⌨️ 操作: ← → で移動 / スペースで発射
+    </div>
   <div id="ui">スコア: <span id="score">0</span></div>
   <div id="stageLabel">ステージ: 1</div>
   <div id="gameOverScreen">
