--- a/shootinggame/index.html
+++ b/shootinggame/index.html
@@ -20,7 +20,8 @@
   <canvas id="gameCanvas"></canvas>
 
   <!-- スマホボタンUI -->
-  <div id="touchButtons">
+  
+  <div id="mobileControls">
     <button id="leftBtn">←</button>
     <button id="fireBtn">🔫</button>
     <button id="rightBtn">→</button>
