--- a/project/social.html
+++ b/project/social.html
@@ -23,6 +23,6 @@
     </div>
   </div>
   <script>var QUIZ_SUBJECT = '社会';</script>
-  <script src="quiz/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
