--- a/project/index.html
+++ b/project/index.html
@@ -22,6 +22,6 @@
       </div>
     </div>
   </div>
-  <script src="quiz/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
