--- a/project/social.html
+++ b/project/social.html
@@ -21,6 +21,10 @@
     <button id="startBtn" onclick="loadSelectedQuiz()" disabled>クイズスタート！</button>
     <div id="quizArea" class="hidden">
       <div id="quiz"></div>
+        <div class="quiz-controls">
+  <button id="backBtn" onclick="goBack()" disabled>一つ戻る</button>
+</div>
+
       <div id="result" class="hidden">
         <h2>結果発表！</h2>
         <p id="score"></p>
