--- a/project/index.html
+++ b/project/index.html
@@ -33,6 +33,7 @@
       </div>
     </div>
   </div>
+    <script>var QUIZ_SUBJECT = '理科';</script>
   <script src="script.js"></script>
 </body>
 </html>
